[package]
name = "javascript_lexer"
version = "0.1.7"
authors = ["retep007 <peter.hrvola@hotmail.com>"]
repository = "https://github.com/retep007/javascript-lexer"
documentation = "https://retep007.github.io/javascript-lexer/"
readme = "README.md"
keywords = ["javscript", "lexer", "parser", "tokenizer", "ecma"]
categories = ["parser-implementations"]
license = "MIT"
description = "Javascript lexer"
edition = "2018"

[badges]
travis-ci = { repository = "retep007/javascript-lexer", branch = "master" }
coveralls = { repository = "retep007/javascript-lexer", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "retep007/javascript-lexer" }
is-it-maintained-open-issues = { repository = "retep007/javascript-lexer" }
maintenance = { status = "actively-developed" }

[dependencies]
internship = "0.6.0"
phf = { version = "0.7.24", features = ["macros"]}

[dev-dependencies]
pretty_assertions = "0.5"
# clippy =  "0.0.21"

[profile.release]
lto = true

[profile.bench]
debug = true
lto = true

[features]
default = []
